--- a/app.ipynb
+++ b/app.ipynb
@@ -36,7 +36,6 @@
    ],
    "source": [
     "from flask import Flask,render_template,url_for,request\n",
-    "import pandas as pd \n",
     "import pickle\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
@@ -66,7 +65,7 @@
     "\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    app.run(debug=True)"
+    "    app.run()"
    ]
   },
   {
